# MobileTeXOCR

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: 15m_base.yaml  base.yaml
configs/rec/: hme_latex_ocr_accuracy.yml  hme_latex_ocr_balanced.yml  hme_latex_ocr_ultralight.yml  hme_latex_ocr_ultralight_v2.yml  hme_latex_ocr_ultralight_v2_path.yml
data/: __init__.py  augmentations.py  base.py  combined.py  crohme.py  hme100k.py  mathwriting.py
export/: __init__.py  to_coreml.py  to_onnx.py
ios/: LaTeXOCR.swift  LaTeXTokenizer.swift
models/: __init__.py  full_model.py
models/decoder/: __init__.py  tokenizer.py  unified_decoder.py
models/encoder/: __init__.py  base.py  fastvithd.py  perception_encoder.py
notebooks/: train_hme_colab.ipynb  train_hme_colab_v2.ipynb
ppocr/data/: __init__.py  collate_fn.py
ppocr/data/imaug/: label_ops.py
ppocr/losses/: __init__.py  rec_hme_loss.py
ppocr/metrics/: __init__.py  rec_metric.py
ppocr/modeling/backbones/: __init__.py  rec_hme_shvit.py
ppocr/modeling/heads/: __init__.py  rec_hme_head.py  rec_hme_head_v2.py
ppocr/postprocess/: __init__.py  rec_postprocess.py
ppocr/utils/: export_model.py
scripts/: benchmark_decode.py  download_data.py  eval.py  setup_thunder.sh  train_thunder.py
tests/: test_kv_cache.py
tools/: download_hme_datasets.py  eval.py  program.py  test_hme_model.py  test_hme_model_v2.py
training/: __init__.py  colab_train.ipynb  metrics.py  train.py  trainer.py
